[package]
name = "sifis-td"
version = "0.0.0"
edition = "2021"
description = "SIFIS-Home extension to the Web of Things (WoT) Thing Description "
license = "MIT"
repository = "https://github.com/sifis-home/sifis-ext"
keywords = ["wot", "WebofThings"]

[dependencies]
serde = { version = "1.0.145", features = ["derive"] }
wot-td = "0.2.0"

