[package]
name = "sifis-td"
version = "0.0.0"
edition = "2021"
description = "SIFIS-Home extension to the Web of Things (WoT) Thing Description "
license = "MIT"
repository = "https://github.com/sifis-home/sifis-ext"
keywords = ["wot", "WebofThings"]

[dependencies]
jsonptr = "0.3.3"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
wot-td = "0.2.1"

[dev-dependencies]
serde_json = "1.0.86"

